1999-10-01  Jason Merrill  <jason@yorick.cygnus.com>

	* typeck.c (decay_conversion): Strip cv-quals from non-class rvalues.

1999-10-01  Mark Mitchell  <mark@codesourcery.com>

	* pt.c (tsubst_decl): If the type of a template instantiation is
	bogus, so is the whole instantiation.

1999-09-30  Mark Mitchell  <mark@codesourcery.com>

	* decl.c (initialize_local_var): Handle static variables here.
	(cp_finish_decl): Tweak handling of function-scope static
	variables.
	* semantics.c (expand_stmt): Handle DECL_STMTs for static
	variables.

	* method.c (emit_thunk): Don't crash when -fsyntax-only.

	* cp-tree.h (lang_decl_flags): Add global_ctor_p and
	global_dtor_p.  Add init_priority.
	(DECL_ACCESS): Adjust accordingly.
	(DECL_GLOBAL_CTOR_P, DECL_GLOBAL_DTOR_P): New macros.
	(GLOBAL_INIT_PRIORITY): Likewise.
	* decl.c (lang_mark_tree): Adjust accordingly.
	(start_objects): Set DECL_GLOBAL_CTOR_P, DECL_GLOBAL_DTOR_P, 
	and GLOBAL_INIT_PRIORITY.
	* dump.c (dequeue_and_dump): Print them.
	* ir.texi: Document them.

	* decl2.c (struct priority_info_s): Remove initialization_sequence
	and destruction_sequence.
	(start_static_storage_duration_function): Return the body of the
	function.  Convert for function-at-a-time mode.
	(generate_inits_for_priority): Remove.
	(finish_static_storage_duration_function): Change prototype.
	Adjust for function-at-a-time mode.
	(do_static_initialization): Likewise.
	(do_static_destruction): Likewise.
	(do_static_initialization_and_destruction): Remove.
	(start_static_initialization_or_destruction): New function.
	(finish_static_initialization_or_destruction): Likewise.
	(get_priority_info): Don't manipulation initialization_sequence or
	destruction_sequence.
	(prune_vars_needing_no_initialization): New function.
	(write_out_vars): Likewise.
	(finish_file): Use the various new functions instead of the old.
	
Thu Sep 30 00:13:27 1999  Dirk Zoller  <duz@rtsffm.com>

	* cp-tree.h (warn_float_equal): Declare.